# inkind-enterprise

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini
apps/core/: views.py
apps/users/: forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
docs/: instructions.md
inkind_enterprise/: asgi.py  urls.py  wsgi.py
inkind_enterprise/settings/: base.py  local.py  production.py  test.py
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
static/css/: cookie-consent.css  custom.css
static/favicons/: site.webmanifest
static/js/: cookie-consent.js
templates/: base.html  landing.html  login.html  placeholder.html  profile.html  register.html
templates/legal/: impressum.html  privacy.html  terms.html
templates/partials/: cookie_consent_banner.html  footer.html  header.html
templates/users/: login.html  password_change.html  password_change_done.html  profile.html  register.html
tests/: test_core.py  test_users.py
